--- a/public/assests/css/footer.styles.css
+++ b/public/assests/css/footer.styles.css
@@ -123,6 +123,7 @@
     padding-top: 8px;
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
 
 .footer-bottom-left img{
@@ -132,7 +133,6 @@
 .footer-bottom-right{
     display: flex;
     flex-direction: row;
-    margin-left: 850px;
 }
 
 .footer-bottom-right svg{
