--- a/public/assests/css/addGig.styles.css
+++ b/public/assests/css/addGig.styles.css
@@ -18,11 +18,11 @@ body{
 }
 
 /*left side*/
-.leftContainer{
+.addGigContainer .leftContainer{
   width: 40%;
 }
 
-.leftContainer .addGigHeader{
+.addGigContainer .leftContainer .addGigHeader{
   height: 20%;
   width: 75%;
   font-size: 40px;
@@ -31,7 +31,7 @@ body{
   color: #404145;;
 }
 
-.leftContainer .addGigAnimation{
+.addGigContainer .leftContainer .addGigAnimation{
   height: 80%;
   width: 100%;
   display: flex;
@@ -40,13 +40,13 @@ body{
 }
 
 /*right side*/
-.rightContainer{
+.addGigContainer .rightContainer{
   width: 60%;
   min-height: calc(100vh - 60px);
   height: auto;
 }
 
-.rightContainer #regForm {
+.addGigContainer .rightContainer #regForm {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -58,11 +58,11 @@ body{
   background-color: #ffffff;
 }
 
-.rightContainer #regForm .content{
+.addGigContainer .rightContainer #regForm .content{
   height: 80%;
 }
 
-.rightContainer #regForm .navigation{
+.addGigContainer .rightContainer #regForm .navigation{
   margin-top: 16px;
   height: 20%;
 }
@@ -75,7 +75,7 @@ input.invalid {
   display: none;
 }
 
-.step {
+.addGigContainer .step {
   height: 15px;
   width: 15px;
   margin: 0 2px;
@@ -85,34 +85,36 @@ input.invalid {
   display: inline-block;
 }
 
-.step.tabActive {
+.addGigContainer .step.tabActive {
   background-color: #1dbf73;
 }
 
-.step.finish {
+.addGigContainer .step.finish {
   background-color: #bbbbbb;
 }
 
-.tab .sideImages{
+.addGigContainer .tab .sideImages{
   display: flex;
 }
 
-.type-1{
+.addGigContainer .type-1{
   font-weight: 600;
   font-size: 16px;
   line-height: 24px;
   color: #404145;
   font-family: Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
-.type-2{
+
+.addGigContainer .type-2{
   font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
   color: #62646a;
 }
-.type-1, .type-2{
+
+.addGigContainer .type-1, .type-2{
   display: block;
 }
 
-.rightContainer select{
+.addGigContainer .rightContainer select{
   margin-bottom: 32px;
   height: 40px;
   width: 200px;
@@ -122,7 +124,7 @@ input.invalid {
   font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
-.rightContainer button{
+.addGigContainer .rightContainer button{
     display: inline-block;
     border-radius: 4px;
     background-color: #1dbf73;
@@ -137,14 +139,14 @@ input.invalid {
     cursor: pointer;
 }
 
-.rightContainer button span{
+.addGigContainer .rightContainer button span{
   cursor: pointer;
   display: inline-block;
   position: relative;
   transition: 0.5s;
 }
 
-.rightContainer button span::after{
+.addGigContainer .rightContainer button span::after{
   content: '\00bb';
   position: absolute;
   opacity: 0;
@@ -153,7 +155,7 @@ input.invalid {
   transition: 0.5s;
 }
 
-.rightContainer button .next::after{
+.addGigContainer .rightContainer button .next::after{
   content: '\00bb';
   position: absolute;
   opacity: 0;
@@ -163,7 +165,6 @@ input.invalid {
 }
 
 /*tab 1*/
-
 .rightContainer input[type="text"], .rightContainer textarea {
   margin: 0;
   padding: 0;
@@ -299,11 +300,11 @@ input.invalid {
     height: auto !important;
   }
 
-  .leftContainer, .rightContainer{
+  .addGigContainer .leftContainer, .addGigContainer .rightContainer{
     width: 100%;
   }
 
-  .top{
+  .addGigContainer .top{
     width: 50%;
   }
 }
@@ -316,21 +317,21 @@ input.invalid {
     height: auto !important;
   }
 
-  .leftContainer, .rightContainer{
+  .addGigContainer .leftContainer, .addGigContainer .rightContainer{
     width: 100%;
   }
 
-  .top{
+  .addGigContainer .top{
     width: 50%;
   }
 
-  .outerTab{
+  .addGigContainer .outerTab{
     display: flex;
     flex-direction: column;
     height: auto !important;
   }
 
-  .Tab {
+  .addGigContainer .Tab {
     display: flex;
     justify-content: space-between;
     border: 1px solid #c5c6c9;
@@ -340,7 +341,7 @@ input.invalid {
     min-height: 38px !important;
   }
 
-  .tabcontent {
+  .addGigContainer .tabcontent {
     padding: 0px 12px;
     border: 1px solid #ccc !important;
     width: 100%;
@@ -348,7 +349,7 @@ input.invalid {
     overflow-y: auto;
   }
 
-  .Tab button{
+  .addGigContainer .Tab button{
     text-align: center;
     font-size: 16px;
     width: calc(100% / 3);
