--- a/public/assests/css/sellerProfile.styles.css
+++ b/public/assests/css/sellerProfile.styles.css
@@ -34,6 +34,7 @@ body{
 }
 
 .buttons{
+    padding: 15px;
     /* display: flex;
     justify-content:center;
     align-items: end;
@@ -124,6 +125,11 @@ body{
     /* flex-grow: 1; */
 }
 
+.hr-line{
+    color: #e5e8efeb;
+    
+}
+
 .img{
     display: flex;
     justify-content: flex-start;
@@ -136,15 +142,47 @@ body{
     align-items: center;
 }
 
+.icon{
+    width: 20px;
+    height: 20px;
+    padding: 10px;
+}
+
 .icons{
     width: 20px;
     height: 20px;
-    padding: 5px;
+    padding: 10px;
 }
 
 .icons-content{
-    display: flex;
+    /* display: flex; */
     padding: 2px;
+    flex-direction: column;
+}
+
+.icon-time{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 7px;
+    font-size: 18px;
+}
+
+.icon-name{
+    font-size: 30px;
+    font-weight: bold;
+    margin: 7px;
+}
+
+.icon-location{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 7px;
+}
+
+.icon-location-value{
+    font-size: 20px;
 }
 
 .intro-Topic{
@@ -181,15 +219,6 @@ body{
 
 }
 
-.profile-content-category-content{
-    margin-left: 18px;
-}
-
-.profile-content-category-header{
-    display: flex;
-    justify-content: space-between;
-}
-
 .other-category-header{
     display: flex;
     justify-content: space-between;
@@ -198,7 +227,21 @@ body{
     width: auto;
     height: auto;
 }
-/*profile-container*/
+
+.personal-information{
+    padding: 20px;
+}
+
+.profile-content-category-content{
+    margin-left: 18px;
+    padding: 15px;
+}
+
+.profile-content-category-header{
+    display: flex;
+    justify-content: space-between;
+}
+
 .profile-container{
 
     background-color: #fff;
@@ -289,7 +332,7 @@ body{
 .Topics{
     font-size: 20px;
     font-weight: bold;
-    padding: 10px;
+    padding: 20px;
 }
 
 .wrap{
