--- a/public/assests/css/manageOrders.styles.css
+++ b/public/assests/css/manageOrders.styles.css
@@ -6,9 +6,8 @@ body{
 
 /*Main Container */
 .manageOrdersContainer{
-    margin: 16px 32px;
-    padding: 16px;
-    width: 100;
+    padding: 16px 32px;
+    width: 100%;
     min-height: calc(100vh - 60px);
     height: auto;
     box-sizing: border-box;
@@ -16,19 +15,23 @@ body{
 
 /*Topic*/
 .manageOrdersHeader{
-    height: 20%;
-    width: 75%;
-    font-size: 40px;
-    line-height: 120%;
+    min-height: 24px;
+    margin-top: 24px;
+    margin-bottom: 48px;
+    font-size: 32px;
     font-weight: 700;
-    color: #404145;
+    color: #222325;
+    line-height: 140%;
+    padding: 0 32px;
 }
 
 /*Content*/
 .manageOrdersContent{
+    margin-right: 32px;
+    margin-left: 32px;
+    padding: 0px 16px;
     display: flex;
     justify-content: space-between;
-    width: 100%;
     margin-top: 32px;
     height: calc(100vh - 180px);
 }  
@@ -42,10 +45,12 @@ body{
 }
 
 .manageOrdersContent .leftContainer{
-    width: 82%;
+    width: 100%;
 }
+
 /* Style the tab */
 .manageOrdersContainer .tab {
+    width: 100%;
     overflow: hidden;
     border: none !important;
     background-color: #f1f1f1;
@@ -91,35 +96,45 @@ body{
 }
 
 /*styling table*/
-
 .outerTable {
     height: 100%;
     overflow: auto;
 }
 
 table{
+    margin-top: 16px;
     background-color: #fff;
+    border-radius: 4px;
     width: 100%;
 }
 
 table, th, td{
     border-collapse: collapse !important;
-    border: 1px solid #c5c6c9 !important;
+    border-bottom: 1px solid #c5c6c9 !important;
 }
 
-.thead th {
-    font-size: 32px;
-}
-.tbody tr{
+tbody tr{
     cursor: pointer;
 }
 
-/*buyer column*/
+tbody tr:hover{
+    background-color: #f1f1f1;
+}
 
+tbody th {
+    font-size: 16px;
+}
+
+tbody td{
+    justify-content: center;
+    text-align: center;
+    padding: 8px;
+}
+
+/*buyer column*/
 .buyer{
     display: flex;
     align-items: center;
-    border: 1px;
 }
 
 img{
@@ -144,5 +159,10 @@ img{
     
     .manageOrdersContent .leftContainer{
         width: 100%;
+    }
+
+    .manageOrdersContent .tab{
+        display: flex;
+        flex-wrap: wrap;
     }
 }
