add gig issue fixed

--- a/public/assests/css/addGig.styles.css
+++ b/public/assests/css/addGig.styles.css
@@ -58,7 +58,7 @@ body{
   background-color: #ffffff;
 }
 
-.addGigContainer .rightContainer #regForm .content{
+.addGigContainer .rightContainer #regForm .addGigContent{
   height: 80%;
 }
 
