--- a/public/assests/css/cardSlider.styles.css
+++ b/public/assests/css/cardSlider.styles.css
@@ -47,7 +47,7 @@
 .card-slider .carousel{
     display: grid;
     grid-auto-flow: column;  
-    grid-auto-columns: calc((100%/5) - 16px);
+    grid-auto-columns: calc((100%/5));
     gap: 20px;
     overflow: hidden;
 }
@@ -86,6 +86,8 @@
 .checked {
     color: orange;
 }
+
+
 @media screen and (max-width: 1200px) {
     .card-slider .carousel{
         grid-auto-columns: calc((100%/3) - 16px);
