--- a/public/assests/css/buyerDashboard.styles.css
+++ b/public/assests/css/buyerDashboard.styles.css
@@ -1,17 +1,10 @@
 /*home content*/
 
-@media only screen and (min-width: 600px) {
-    .personalized-header {
-        margin-top: 8px;
-        padding: 0;
-    }
-}
-
-
+/*Header*/
 .buyerDashboard-content .personalizedHeader{
     min-height: 24px;
-    margin-top: 24px;
-    margin-bottom: 24px;
+    margin-top: 32px;
+    margin-bottom: 64px;
     font-size: 32px;
     font-weight: 700;
     color: #222325;
@@ -19,22 +12,43 @@
     padding: 0 32px;
 }
 
-
-.buyerDashboard-content .userHistoryContent{
-    margin-left: 32px;
-    margin-right: 32px;
-    margin-bottom: 24px;
-    border: 1px solid #e4e5e7;
-    overflow: auto;
-    padding: 16px 32px 32px;
-    box-sizing: border-box;
-    border-radius: 8px;
+/*Main Container*/
+.buyerDashboard-content .mainContent{
+    margin: 0 32px;
 }
 
-
-.buyerDashboard-content .historyHeader{
-    font-size: 20px;
-    color: #404145;
+.buyerDashboard-content #content{
+    margin-top: 32px;
+    margin-bottom: 32px;
 }
 
+.buyerDashboard-content .row{
+    display: flex;
+    justify-content: space-between;
+}
+
+.buyerDashboard-content .row .leftSide{
+    display: flex;
+    align-items: center;
+}
+
+.buyerDashboard-content svg{
+    height: 32px;
+    width: 32px;
+}
+
+.buyerDashboard-content a{
+    color: #222325;
+    text-decoration: none;
+}
+
+.buyerDashboard-content #content h3{ 
+    margin-bottom: 16px;
+}
+@media only screen and (min-width: 600px) {
+    .personalized-header {
+        margin-top: 8px;
+        padding: 0;
+    }
+}
 
