--- a/public/assests/css/buyerHeader.styles.css
+++ b/public/assests/css/buyerHeader.styles.css
@@ -1,93 +1,123 @@
-body{
-    font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
+*{
     margin: 0;
     padding: 0;
+    box-sizing: border-box
+}
+body{
+    font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 header {
+    background-color: #fff;
     color: #62646A;
 }
 header .upperHeader{
-    height: 60px;
-    width: 100%;
-    padding: 32px 32px;
-    align-items: center;
     display: flex;
+    align-items: center;
     justify-content: space-between;
-    border-bottom: 1px solid #c5c6c9;
-    box-sizing: border-box;
-}
-header .upperHeader .row{
-    display: flex;
-    align-items: center;
-    width: 40%;
-    gap: 64px;
+    height: 80px;
+    width: 100%;
+    padding: 32px;
 }
 
-/*Logo*/
+/*logo*/
 .logo{
-    width: 30%;
+    width: auto;
 }
-
 .logo a {
     font-size: 24px;
     color: #1dbf73;
     text-decoration: none;
     font-weight: bold;
 }
+.logo a span {
+    width: 10%;
+}
+/*search bar*/
 
-/*Search Bar*/
-.searchBar{
-    width: 70%;
+.upperHeader .searchBar{
+    width: 54%;
+    justify-content: space-between;
 }
-.searchBar form{
-    width: 100%;
+.upperHeader .searchBar form{
     display: flex;
+    width: 100%;
 }
-.searchBar input{
+.upperHeader .searchBar input[type=text] {
     display: block;
     text-align: left;
-    height: 32px;
     width: 100%;
     margin: 0;
     padding: 14px;
-    border: 1px solid #62646A;
-    border-radius: 16px 0 0 16px;
+    border: 1px solid #c5c6c9;
+    border-radius: 4px 0 0 4px;
     border-right: 0;
-    font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
-.searchBar button{
-    border-left: 0 !important;
-    border: 1px solid #62646A !important;
-    background-color: #1dbf73;
-    color: #ffffff;
-    border-radius: 0 16px 16px 0;
-    height: 32px;
-    width: 32px;
+.upperHeader .searchBar button {
+    display: block;
+    text-align: left;
+    margin: 0;
+    padding: 14px;
+    cursor: pointer;
+    border: 1px solid #c5c6c9;
+    border-radius: 0 4px 4px 0;
+    background-color: #000000;
+    color: #fff;
+    transition: ease-in-out 0.3s;
 }
-.searchBar button:hover{
-    transition : 0.3s; 
-    background-color: #ffffff;
-    color: #62646A;
+.upperHeader .searchBar button:hover {
+    color: #333;
+    background: #fff;
+}
+.submenu {
+    position: absolute;
+}
+.submenu ul{
+    flex-direction: column;
+    position: absolute;
+    background-color: white;
+    align-items: flex-start;
+    transition: all 0.5s ease;
+    width: 20rem;
+    right: -3rem;
+    top: 4.5rem;
+    border-radius: 0.325rem;
+    gap: 0;
+    padding: 1rem 0rem;
+    opacity: 0;
+    box-shadow: 0px 0px 100px rgba(20, 18, 18, 0.25);
+    display: none;
+}
+.submenu ul li {
+    list-style-type: none;
+    position: relative;
+    padding: 0.625rem 0 0.5rem;
 }
 
-/*Navigation Bar*/
+/*navbar and navigation links*/
+
 .upperHeader .navbar{
-    width: 50%;
     display: flex;
     align-items: center;
+    width: 32%;
+}
+.upperHeader nav{
+    width: 100%;
 }
 .nav-links {
     list-style: none;
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 .nav-links .svgLinks{
     display: flex;
     justify-content: space-around;
+    width: 20%;
 }
 .nav-links .wordLinks{
     display: flex;
     justify-content: space-around;
+    width: 60%;
 }
 .nav-links .imgLinks{
     display: flex;
@@ -141,30 +171,6 @@ header .upperHeader .row{
     background-color: crimson;
 }
 
-.navbar{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-}
-.nav-links {
-    list-style: none;
-    display: flex;
-}
-.nav-links li {
-    margin-left: 16px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.upperHeader svg {
-    width: 24px;
-    height: 24px;
-    font-size: 14px;
-    color: #62646A;
-    margin-right: 10px;
-    align-items: center;
-}
-
 /*profile pic*/
 .upperHeader img{
     width: 48px;
@@ -173,3 +179,26 @@ header .upperHeader .row{
     object-fit: cover;
 }
 
+/*header categories*/
+.headerCategories{
+    width: 100%;
+}
+.headerCategories nav .nav-links li{
+    display: inline-block;
+}
+.headerCategories nav .nav-links {
+    width: auto;
+    overflow-x: auto;
+    border-top: 2px solid #62646A;
+    border-bottom: 2px solid #62646A;
+    padding: 0px 32px;
+}
+
+
+@media only screen and (max-width: 900px) {
+    header .upperHeader .row{
+        display: flex;
+        flex-direction: column;
+    }
+
+}
