--- a/public/assests/css/buyerHeader.styles.css
+++ b/public/assests/css/buyerHeader.styles.css
@@ -1,22 +1,19 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box
-}
 body{
     font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
+    margin: 0;
+    padding: 0;
 }
 header {
-    background-color: #fff;
     color: #62646A;
 }
 header .upperHeader{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 80px;
+    height: 60px;
     width: 100%;
-    padding: 32px;
+    padding: 32px 32px;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: border-box;
 }
 
 /*logo*/
@@ -32,10 +29,10 @@ header .upperHeader{
 .logo a span {
     width: 10%;
 }
-/*search bar*/
 
+/*search bar*/
 .upperHeader .searchBar{
-    width: 54%;
+    width: 40%;
     justify-content: space-between;
 }
 .upperHeader .searchBar form{
@@ -47,7 +44,7 @@ header .upperHeader{
     text-align: left;
     width: 100%;
     margin: 0;
-    padding: 14px;
+    padding: 8px;
     border: 1px solid #c5c6c9;
     border-radius: 4px 0 0 4px;
     border-right: 0;
@@ -56,7 +53,7 @@ header .upperHeader{
     display: block;
     text-align: left;
     margin: 0;
-    padding: 14px;
+    padding: 8px;
     cursor: pointer;
     border: 1px solid #c5c6c9;
     border-radius: 0 4px 4px 0;
@@ -68,56 +65,24 @@ header .upperHeader{
     color: #333;
     background: #fff;
 }
-.submenu {
-    position: absolute;
-}
-.submenu ul{
-    flex-direction: column;
-    position: absolute;
-    background-color: white;
-    align-items: flex-start;
-    transition: all 0.5s ease;
-    width: 20rem;
-    right: -3rem;
-    top: 4.5rem;
-    border-radius: 0.325rem;
-    gap: 0;
-    padding: 1rem 0rem;
-    opacity: 0;
-    box-shadow: 0px 0px 100px rgba(20, 18, 18, 0.25);
-    display: none;
-}
-.submenu ul li {
-    list-style-type: none;
-    position: relative;
-    padding: 0.625rem 0 0.5rem;
-}
 
 /*navbar and navigation links*/
-
 .upperHeader .navbar{
     display: flex;
     align-items: center;
-    width: 32%;
-}
-.upperHeader nav{
-    width: 100%;
 }
 .nav-links {
     list-style: none;
     display: flex;
     justify-content: space-between;
-    width: 100%;
 }
 .nav-links .svgLinks{
     display: flex;
     justify-content: space-around;
-    width: 20%;
 }
 .nav-links .wordLinks{
     display: flex;
     justify-content: space-around;
-    width: 60%;
 }
 .nav-links .imgLinks{
     display: flex;
@@ -171,6 +136,30 @@ header .upperHeader{
     background-color: crimson;
 }
 
+.navbar{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+.nav-links {
+    list-style: none;
+    display: flex;
+}
+.nav-links li {
+    margin-left: 16px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.upperHeader svg {
+    width: 24px;
+    height: 24px;
+    font-size: 14px;
+    color: #62646A;
+    margin-right: 10px;
+    align-items: center;
+}
+
 /*profile pic*/
 .upperHeader img{
     width: 48px;
@@ -179,12 +168,94 @@ header .upperHeader{
     object-fit: cover;
 }
 
+@media only screen and (max-width: 1500px) {
+    .navbar .wordLink  {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 1500px) {
+    .upperHeader .searchBar{
+        flex-basis: 500%;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    
+
+      .upperHeader .searchBar a, .upperHeader .searchBar input[type=text]{
+        display: block;
+        text-align: left;
+        width: 100%;
+        margin: 0;
+        padding: 14px;
+    }
+    .upperHeader .searchBar input[type=text] {
+        border: 1px solid #c5c6c9;
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    .navbar  {
+        display: none;
+    }
+}
+
+
+@media screen and (max-width: 600px) {
+
+    .upperHeader .navbar{
+        display: none;
+    }
+
+    .upperHeader{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .upperHeader .searchBar{
+      width: 100%;
+    }
+
+    .upperHeader .searchBar form{
+        width: 100%;
+        margin-bottom: 10px;
+    }
+
+    .upperHeader .logo {
+        margin-bottom: 10px;
+        margin: 0 auto;
+    }
+
+    .upperHeader .searchBar a, .upperHeader .searchBar input[type=text]{
+        display: block;
+        text-align: left;
+        width: 100%;
+        margin: 0;
+        padding: 14px;
+    }
+    .upperHeader .searchBar input[type=text] {
+        border: 1px solid #c5c6c9;
+    }
+}
+
+
+
+@media only screen and (max-width: 600px) {
+    header .upperHeader  {
+        border-bottom: 1px solid #c5c6c9;
+    }
+}
+
+
 /*header categories*/
 .headerCategories{
     width: 100%;
+    background-color: #fff !important;
 }
 .headerCategories nav .nav-links li{
     display: inline-block;
+    margin-left: 0 !important;
 }
 .headerCategories nav .nav-links {
     width: auto;
