--- a/public/assests/css/buyerDashboard.styles.css
+++ b/public/assests/css/buyerDashboard.styles.css
@@ -43,7 +43,19 @@
 .buyerDashboardContent svg{
     height: 32px;
     width: 32px;
+    padding: 2px;
+    background-color: #000000;
+    color: #fff;
+    border: 1px solid black;
+    border-radius: 100%;
+    transition: ease-in-out 0.3s;
 }
+
+.buyerDashboardContent svg:hover{
+    background-color:  #fff;
+    color: #000000;
+}
+
 
 .buyerDashboardContent a{
     color: #222325;
