--- a/public/assests/css/gigCard.styles.css
+++ b/public/assests/css/gigCard.styles.css
@@ -18,6 +18,7 @@
     min-height: 150px;
     height: auto;
     border-radius: 8px 8px 0 0;
+    margin-bottom: 8px;
 }
 .gigCard .rating{
     display: flex;
