--- a/public/assests/css/gigCard.styles.css
+++ b/public/assests/css/gigCard.styles.css
@@ -51,3 +51,30 @@
 .gigCard .cardRow,.gigTitle,.price{
     padding: 0 8px;
 }
+
+@media only screen and (max-width: 1200px) {
+    .gigCard{
+        width: calc(100% / 3 - 16px);
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .gigCard{
+        width: calc(100% / 2 - 16px);
+        height: 360px;
+    }
+    .gigCard .coverImg img{
+        height: 200px;
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    .gigCard{
+        width: calc(100% - 16px);
+        height: 360px;
+    }
+    .gigCard .coverImg img{
+        height: 200px;
+    }
+}
